# strategyPattern

./: CMakeLists.txt  LICENSE  README.md
inc/: IeatBehavior.hpp  ImoveBehavior.hpp  IsoundBehavior.hpp  animal.hpp  bark_soundBehavior.hpp  blub_soundBehavior.hpp  carnivore_eatBehavior.hpp  fly_moveBehavior.hpp  herbivore_eatBehavior.hpp  moo_soundBehavior.hpp  omnivore_eatBehavior.hpp  sing_soundBehavior.hpp  swim_moveBehavior.hpp  walk_moveBehavior.hpp
src/: animal.cpp  main.cpp
